26.1+ bug (hopefully) fixed